# lab2

./: CMakeLists.txt  DynamicArray.h  LinkedList.h  SequenceTests.h  main.cpp
Elements/: Complex.h  Integer.h
Sequence/: ImmutableArraySequence.h  ImmutableListSequence.h  MutableArraySequence.h  MutableListSequence.h  NamedSequence.h  Sequence.h
UI/: Menu.h  MenuFunctions.h
pyqt/: AniList.db  calendar.ui  main.py  main.ui  notice.ui
